[package]
name = "circular_buffer_rs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "circular_buffer_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.33.0"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }